Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-138807

[REG: 6.7 -> 6.8] win: QResource::registerResource crashes if registering .rcc from inside the resource system

XMLWordPrintable

    • Windows
    • 843f39358 (dev), e529377af (6.10)

      Invalid handle is passed into _get_osfhandle which triggers an assert and then a crash.

        For Gerrit Dashboard: QTBUG-138807
        # Subject Branch Project Status CR V

            jbornema Joerg Bornemann
            poikelin Joni Poikelin
            Votes:
            0 Vote for this issue
            Watchers:
            3 Start watching this issue

              Created:
              Updated:
              Resolved:

                There is 1 open Gerrit change