Fix crash when trying to register .rcc from resource system

_get_osfhandle crashes if invalid value is passed in as a file
descriptor. Avoid trying to map if there is no valid file
descriptor for a file.

Fixes: QTBUG-138807
Pick-to: 6.8
Change-Id: I462b93d3665c1894fb966080d106839b9840a05b
Reviewed-by: Mårten Nordheim <marten.nordheim@qt.io>
Reviewed-by: Thiago Macieira <thiago.macieira@intel.com>
(cherry picked from commit 843f39358f764f6bda2a2b4e5ed881d4b728f7cb)
Reviewed-by: Qt Cherry-pick Bot <cherrypick_bot@qt-project.org>